# agent-notes

./: .gitignore  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  VERSION  dist  pyproject.toml  source
.claude-plugin/: README.md  plugin.json
.claude-plugin/agents/: analyst.md  api-reviewer.md  architect.md  coder.md  database-specialist.md  debugger.md  devil.md  devops.md  explorer.md  integrations.md  performance-profiler.md  refactorer.md  reviewer.md  security-auditor.md  system-auditor.md  tech-writer.md  test-runner.md  test-writer.md  wiki-compiler.md
.github/workflows/: validate.yml
.opencode-plugin/: index.js  package.json
agent_notes/: __init__.py  __main__.py  build.py  cli.py  cli_backend.py  config.py  constants.py  doctor.py  doctor_checks.py  install.py  install_state.py  installer.py  list.py  memory.py  model_registry.py  regenerate.py  role_registry.py  set_role.py  state.py  update.py  update_diff.py  validate.py  wizard.py
agent_notes/commands/: __init__.py  (+15 more)
agents/: api-reviewer.md  coder.md  database-specialist.md  devops.md  explorer.md  lead.md  performance-profiler.md  reviewer.md  security-auditor.md  spec-runner.md  spec-writer.md  system-auditor.md  tech-writer.md
agents-opencode/: api-reviewer.md  coder.md  database-specialist.md  devops.md  explorer.md  lead.md  performance-profiler.md  reviewer.md  security-auditor.md  spec-runner.md  spec-writer.md  system-auditor.md  tech-writer.md
commit/: commit
docker/: README.md  compose.md  dockerfile.md  index.md
docker-compose/: SKILL.md
docker-compose-advanced/: SKILL.md
docker-dockerfile-languages/: SKILL.md
docs/: ADD_CLI.md  ADD_MODEL.md  ADD_ROLE.md  ARCHITECTURE.md  AUDIT-plugin-parity.md  AUDIT-pypi-metadata.md  AUDIT-test-categorization.md  AUDIT-test-coverage.md  CLI_CAPABILITIES.md  ENGINE_PLAN.md  PLAN-1.2.0.md  PLAN-1.3.0.md  REFACTOR_PLAN.md  RESEARCH-multi-provider.md  RESEARCH-opencode-plugin.md
global/: AGENTS.md  CLAUDE.md  copilot-instructions.md
lib/: build.sh  doctor.sh  generate.py  install.sh  uninstall.sh  update.sh  validate.sh
rails/: CLAUDE.md.example  README.md  active_storage.md  broadcasting.md  concerns.md  controllers.md  helpers.md  index.md  initializers.md  javascript.md  jobs.md  kamal.md  lib.md  mailers.md  migrations.md  models.md  routes.md  style.md  tests.md  validations.md  viewcomponents.md  views.md
rails-controllers-advanced/: SKILL.md
rails-jobs/: SKILL.md
rails-kamal/: SKILL.md
rails-routes/: SKILL.md
rails-view-components/: SKILL.md
rails-view-components-advanced/: SKILL.md
rails-views/: SKILL.md
scripts/: agent-notes  build-claude-plugin.sh  build-opencode-plugin.sh  build-plugin.sh  build-plugins  build.sh  doctor.sh  generate.py  install-skills.sh  install.sh  list.sh  memory.sh  publish.sh  pypirc.template  release  uninstall.sh  update.sh  validate.sh
source/: agents.yaml  global.md
tests/: conftest.py  test_agent_registry.py  test_build.py  test_build_commands.py  test_cli.py  test_cli_backend.py  test_commands_package.py  test_config.py  test_doctor.py  test_doctor_checks.py  test_domain_package.py  test_expand_includes.py  test_install.py  test_install_state.py  test_installer.py  test_list.py  test_memory.py  test_model_registry.py  test_package_layout.py  test_process_skills.py  test_regenerate.py  test_registries_package.py  test_role_registry.py  test_rule_registry.py  test_services_package.py  test_session_context.py  test_set_role.py  test_settings_writer.py  test_skill_registry.py  test_state.py  test_update.py  test_update_diff.py  test_user_config.py  test_validate.py  test_wizard.py
(+293 files in other folders)
