[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agent-notes"
dynamic = ["version"]
description = "AI agent configuration manager for Claude Code, OpenCode, and Copilot"
authors = [{ name = "Eugene Naumov" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/rubakas/agent-notes"
Repository = "https://github.com/rubakas/agent-notes"

[project.scripts]
agent-notes = "agent_notes.cli:main"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["lib"]